--- a/babyDesFem.html
+++ b/babyDesFem.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baby Desenhada Feminina - Meias Sene</title>
     <link rel="stylesheet" href="baby.css">
+    <link rel="icon" href="img/iconLogo.png">
 </head>
 
 <body>
-    ody>
     <header id="header">
         <div class="cabecalhoUm">
             <div class="imagemLogo">
