--- a/canoCurtoFem.html
+++ b/canoCurtoFem.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meias Sene</title>
     <link rel="stylesheet" href="CanoCurtoFem.css">
+    <link rel="icon" href="img/iconLogo.png">
 </head>
 
 <body>
@@ -296,7 +297,6 @@
         </section>
     </main>
 
-
     <footer id="footer">
         <div class="container-rodape">
             <div class="linha1-rodape">
@@ -375,7 +375,6 @@
             </div>
         </div>
     </footer>
-
 
     <script>
         const imagensPorCor = {
@@ -559,9 +558,6 @@
 
         // FIM DO CABEÇALHO
     </script>
-
-
-
 
 </body>
 
