--- a/socialMasculina.html
+++ b/socialMasculina.html
@@ -15,100 +15,174 @@
             <div class="imagemLogo">
                 <a href="index.html"><img src="img/logoSene.png" alt="Logo meias sene"></a>
             </div>
+            <div class="menu-icon" id="menuIcon">&#9776;</div>
+            <nav class="cabecalho2">
+                <div class="menu-item">
+                    <a href="" class="item">Baby Fem</a>
+                    <div class="submenu">
+                        <div class="submenuOrganizacao">
+                            <p>Baby Feminino</p>
+                            <div class="submenuItem">
+                                <a href="babyDesFem.html">Baby Feminina Desenhada</a>
+                                <a href="babyColorsFem.html">Baby Feminina Color’s</a>
+                                <a href="babySapFem.html">Baby Feminina Malha Persa<br>/ Baby Feminina Sapatilha</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <a href="" class="item">Baby Masc</a>
+                    <div class="submenu">
+                        <div class="submenuOrganizacao">
+                            <p>Baby Masculina</p>
+                            <div class="submenuItem">
+                                <a href="babyDesMasc.html">Baby Masculina Desenhada</a>
+                                <a href="babyColorsMasc.html">Baby Masculina Color’s</a>
+                                <a href="babySapMasc.html">Baby Masculina Malha Persa<br>/ Baby Feminina Sapatilha</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <a href="" class="item">Kids Fem</a>
+                    <div class="submenu">
+                        <div class="submenuOrganizacao">
+                            <p>Kids Feminina</p>
+                            <div class="submenuItem">
+                                <a href="kidsFem.html">Kids Feminina</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <a href="" class="item">Kids Masc</a>
+                    <div class="submenu">
+                        <div class="submenuOrganizacao">
+                            <p>Kids Masculina</p>
+                            <div class="submenuItem">
+                                <a href="kidsMas.html">Kids Masculina</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <a href="" class="item">Adulto Fem</a>
+                    <div class="submenu">
+                        <div class="submenuOrganizacao">
+                            <p>Adulto Feminino</p>
+                            <div class="submenuItem">
+                                <div><a href="proFeminino.html">Pró</a>
+                                    <a href="CanoCurtoCasualFem.html">Casual</a>
+                                    <a href="babyDesFem.html">Baby Desenhada</a>
+                                    <a href="CanoLongoFem.html">Casual Cano Longo</a>
+                                </div>
+                                <div><a href="babyColorsFem.html">Baby Color’s</a>
+                                    <a href="canoCurtoFem.html">Cano Curto / Cano Curto Desenhada</a>
+                                    <a href="babySapFem.html">Baby Sapatilha / Baby Malha Persa</a>
+                                    <a href="kidsFem.html">Kids</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <a href="" class="item">Adulto Masc</a>
+                    <div class="submenu">
+                        <div class="submenuOrganizacao">
+                            <p>Adulto Masculino</p>
+                            <div class="submenuItem">
+                                <div><a href="proMasculina.html">Pró</a>
+                                    <a href="babyDesMasc.html">Baby Desenhada</a>
+                                    <a href="esportivaMasc.html">Esportiva</a>
+                                    <a href="socialMasculina.html">Social</a>
+                                    <a href="canoCurto-masculino.html">Cano Curto / Cano Curto Desenhada</a>
+                                </div>
+                                <div><a href="babyColorsMasc.html">Baby Color’s</a>
+                                    <a href="babySapMasc.html">Baby Sapatilha / Baby Malha Persa</a>
+                                    <a href="kidsMas.html">Kids</a>
+                                    <a href="juvenilMasculina.html">Juvenil</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </nav>
         </div>
-        <div class="linha"></div>
-        <nav class="cabecalho2">
-            <div class="menu-item">
-                <a href="" class="item">Baby Fem</a>
-                <div class="submenu">
-                    <div class="submenuOrganizacao">
-                        <p>Baby Feminino</p>
-                        <div class="submenuItem">
-                            <a href="babyDesFem.html">Baby Feminina Desenhada</a>
-                            <a href="babyColorsFem.html">Baby Feminina Color’s</a>
-                            <a href="babySapFem.html">Baby Feminina Malha Persa<br>/ Baby Feminina Sapatilha</a>
-                        </div>
-                    </div>
+        <div class="linha" id="linha"></div>
+    </header>
+
+    <div class="modal-menu" id="modalMenu">
+        <span class="close-modal" id="closeModal">&times;</span> <!-- Botão de fechar -->
+
+        <!-- Logo centralizada no modal -->
+        <div class="imagemLogo">
+            <a href="index.html"><img src="img/logoSene.png" alt="Logo meias sene"></a>
+        </div>
+
+        <!-- Ícones de navegação no modal -->
+        <nav>
+            <div class="menu-itemModal">
+                <a href="#" class="itemModal" data-submenu="babyFem">Baby Feminina</a>
+                <div class="submenuModal" id="submenu-babyFem">
+                    <a href="babyDesFem.html">Baby Feminina Desenhada</a>
+                    <a href="babyColorsFem.html">Baby Feminina Color’s</a>
+                    <a href="babySapFem.html">Baby Feminina Malha Persa / Sapatilha</a>
                 </div>
             </div>
-            <div class="menu-item">
-                <a href="" class="item">Baby Masc</a>
-                <div class="submenu">
-                    <div class="submenuOrganizacao">
-                        <p>Baby Masculina</p>
-                        <div class="submenuItem">
-                            <a href="babyDesMasc.html">Baby Masculina Desenhada</a>
-                            <a href="babyColorsMasc.html">Baby Masculina Color’s</a>
-                            <a href="babySapMasc.html">Baby Masculina Malha Persa<br>/ Baby Feminina Sapatilha</a>
-                        </div>
-                    </div>
+
+            <div class="menu-itemModal">
+                <a href="#" class="itemModal" data-submenu="babyMasc">Baby Masculina</a>
+                <div class="submenuModal" id="submenu-babyMasc">
+                    <a href="babyDesMasc.html">Baby Masculina Desenhada</a>
+                    <a href="babyColorsMasc.html">Baby Masculina Color’s</a>
+                    <a href="babySapMasc.html">Baby Masculina Malha Persa / Sapatilha</a>
                 </div>
             </div>
-            <div class="menu-item">
-                <a href="" class="item">Kids Fem</a>
-                <div class="submenu">
-                    <div class="submenuOrganizacao">
-                        <p>Kids Feminina</p>
-                        <div class="submenuItem">
-                            <a href="kidsFem.html">Kids Feminina</a>
-                        </div>
-                    </div>
+
+            <div class="menu-itemModal">
+                <a href="#" class="itemModal" data-submenu="kidsFem">Kids Feminina</a>
+                <div class="submenuModal" id="submenu-kidsFem">
+                    <a href="kidsFem.html">Kids Feminina</a>
                 </div>
             </div>
-            <div class="menu-item">
-                <a href="" class="item">Kids Masc</a>
-                <div class="submenu">
-                    <div class="submenuOrganizacao">
-                        <p>Kids Masculina</p>
-                        <div class="submenuItem">
-                            <a href="kidsMas.html">Kids Masculina</a>
-                        </div>
-                    </div>
+
+            <div class="menu-itemModal">
+                <a href="#" class="itemModal" data-submenu="kidsMasc">Kids Masculina</a>
+                <div class="submenuModal" id="submenu-kidsMasc">
+                    <a href="kidsMas.html">Kids Masculina</a>
                 </div>
             </div>
-            <div class="menu-item">
-                <a href="" class="item">Adulto Fem</a>
-                <div class="submenu">
-                    <div class="submenuOrganizacao">
-                        <p>Adulto Feminino</p>
-                        <div class="submenuItem">
-                            <div><a href="proFeminino.html">Pró</a>
-                                <a href="CanoCurtoCasualFem.html">Casual</a>
-                                <a href="babyDesFem.html">Baby Desenhada</a>
-                                <a href="CanoLongoFem.html">Casual Cano Longo</a>
-                            </div>
-                            <div><a href="babyColorsFem.html">Baby Color’s</a>
-                                <a href="canoCurtoFem.html">Cano Curto / Cano Curto Desenhada</a>
-                                <a href="babySapFem.html">Baby Sapatilha / Baby Malha Persa</a>
-                                <a href="kidsFem.html">Kids</a>
-                            </div>
-                        </div>
-                    </div>
+
+            <div class="menu-itemModal">
+                <a href="#" class="itemModal" data-submenu="adultoFem">Adulto Feminina</a>
+                <div class="submenuModal" id="submenu-adultoFem">
+                    <a href="proFeminino.html">Pró</a>
+                    <a href="CanoCurtoCasualFem.html">Casual</a>
+                    <a href="babyDesFem.html">Baby Desenhada</a>
+                    <a href="CanoLongoFem.html">Casual Cano Longo</a>
+                    <a href="babyColorsFem.html">Baby Color’s</a>
+                    <a href="canoCurtoFem.html">Cano Curto / Cano Curto Desenhada</a>
+                    <a href="babySapFem.html">Baby Sapatilha / Baby Malha Persa</a>
+                    <a href="kidsFem.html">Kids</a>
                 </div>
             </div>
-            <div class="menu-item">
-                <a href="" class="item">Adulto Masc</a>
-                <div class="submenu">
-                    <div class="submenuOrganizacao">
-                        <p>Adulto Masculino</p>
-                        <div class="submenuItem">
-                            <div><a href="">Pró</a>
-                                <a href="#">Casual</a>
-                                <a href="babyDesMasc.html">Baby Desenhada</a>
-                                <a href="#">Casual Cano Longo</a>
-                                <a href="#">Cano Curto / Cano Curto Desenhada</a>
-                            </div>
-                            <div><a href="babyColorsMasc.html">Baby Color’s</a>
-                                <a href="babySapMasc.html">Baby Sapatilha / Baby Malha Persa</a>
-                                <a href="kidsMas.html">Kids</a>
-                                <a href="#">Juvenil</a>
-                            </div>
-                        </div>
-                    </div>
+
+            <div class="menu-itemModal">
+                <a href="#" class="itemModal" data-submenu="adultoMasc">Adulto Masculina</a>
+                <div class="submenuModal" id="submenu-adultoMasc">
+                    <a href="proMasculina.html">Pró</a>
+                    <a href="babyDesMasc.html">Baby Desenhada</a>
+                    <a href="esportivaMasc.html">Esportiva</a>
+                    <a href="socialMasculina.html">Social</a>
+                    <a href="canoCurto-masculino.html">Cano Curto / Cano Curto Desenhada</a>
+                    <a href="babyColorsMasc.html">Baby Color’s</a>
+                    <a href="babySapMasc.html">Baby Sapatilha / Baby Malha Persa</a>
+                    <a href="kidsMas.html">Kids</a>
+                    <a href="juvenilMasculina.html">Juvenil</a>
                 </div>
             </div>
         </nav>
-    </header>
+    </div>
 
     <main>
         <section id="meiasDesMasc">
@@ -123,7 +197,9 @@
                         <h3 class="Subtitulo">Meia Social Azul Marinho Desenhada Masculina</h3>
                         <h3 class="numeracao">39 á 44</h3>
                         <div class="corDesenhada-01">
-                            <div class="DesenhadoAzulMarinho"> <p>1</p> </div>
+                            <div class="DesenhadoAzulMarinho">
+                                <p>1</p>
+                            </div>
                         </div>
                     </div>
                     <div class="preco-informacoes">
@@ -391,6 +467,81 @@
                 console.log('Classe "selected" adicionada a:', this); // Verifique se o elemento correto está sendo selecionado
             });
         });
+    </script>
+    <script>
+        // CABEÇALHO
+        const menuIcon = document.querySelector('.menu-icon');
+        const modalMenu = document.querySelector('.modal-menu');
+        const closeModal = document.querySelector('.close-modal');
+
+        menuIcon.addEventListener('click', function () {
+            if (modalMenu.classList.contains('show')) {
+                modalMenu.classList.remove('show');
+                document.body.style.overflow = 'auto';
+            } else {
+                modalMenu.classList.add('show');
+                document.body.style.overflow = 'hidden';
+            }
+        });
+
+        if (closeModal) {
+            closeModal.addEventListener('click', function () {
+                modalMenu.classList.remove('show');
+                document.body.style.overflow = 'auto';
+            });
+        }
+
+
+        // Selecione todos os itens do menu
+        const menuItems = document.querySelectorAll('.menu-itemModal');
+
+        // Adicione um listener de clique para cada item
+        menuItems.forEach(item => {
+            item.addEventListener('click', () => {
+                // Alterna a classe 'open' no item clicado
+                item.classList.toggle('open');
+
+                // Fecha outros submenus, se necessário (opcional)
+                menuItems.forEach(otherItem => {
+                    if (otherItem !== item) {
+                        otherItem.classList.remove('open');
+                    }
+                });
+            });
+        });
+
+        document.addEventListener('DOMContentLoaded', function () {
+            // Seleciona todos os itens do menu
+            const itemModals = document.querySelectorAll('.itemModal');
+
+            itemModals.forEach(item => {
+                item.addEventListener('click', function (event) {
+                    event.preventDefault(); // Previne o comportamento padrão do link
+
+                    // Obtém o ID do submenu correspondente
+                    const submenuId = `submenu-${this.getAttribute('data-submenu')}`;
+                    const submenu = document.getElementById(submenuId);
+                    const linha = document.getElementById('linha')
+
+                    // Fecha todos os submenus
+                    document.querySelectorAll('.submenuModal').forEach(sub => {
+                        if (sub !== submenu) {
+                            sub.style.display = 'none'; // Esconde outros submenus
+                        }
+                    });
+
+                    // Alterna a visibilidade do submenu clicado
+                    if (submenu.style.display === "block") {
+                        submenu.style.display = "none";
+                        linha.style.display = "none"; // Esconde se já estiver visível
+                    } else {
+                        submenu.style.display = "block"; // Exibe o submenu
+                    }
+                });
+            });
+        });
+
+        // FIM DO CABEÇALHO
     </script>
 
 </body>
