--- a/CanoLongoFem.html
+++ b/CanoLongoFem.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meias Sene</title>
     <link rel="stylesheet" href="CanoCurtoFem.css">
+    <link rel="icon" href="img/iconLogo.png">
 </head>
 
 <body>
@@ -309,7 +310,6 @@
         </section>
     </main>
 
-
     <footer id="footer">
         <div class="container-rodape">
             <div class="linha1-rodape">
@@ -388,7 +388,6 @@
             </div>
         </div>
     </footer>
-
 
     <script>
         const imagensPorCor = {
