--- a/babySapMasc.html
+++ b/babySapMasc.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Baby Sapatilha e Malha Persa Masculina - Meias Sene</title>
     <link rel="stylesheet" href="baby.css">
+    <link rel="icon" href="img/iconLogo.png">
 </head>
 
 <body>
