--- a/descricaoBaby/descricaoBabyColorsFem.html
+++ b/descricaoBaby/descricaoBabyColorsFem.html
@@ -7,6 +7,7 @@
     <title>Meias Sene</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style-baby.css">
+    <link rel="icon" href="../img/iconLogo.png">
 </head>
 
 <body>
@@ -15,97 +16,174 @@
             <div class="imagemLogo">
                 <a href="index.html"><img src="img/logoSene.png" alt="Logo meias sene"></a>
             </div>
-        </div>
-        <div class="linha"></div>
-        <nav class="cabecalho2">
-            <div class="menu-item">
-                <a href="" class="item">Baby Fem</a>
-                <div class="submenu">
-                    <div class="submenuOrganizacao">
-                        <p>Baby Feminino</p>
-                        <div class="submenuItem">
-                            <a href="babyDesFem.html">Baby Feminina Desenhada</a>
-                            <a href="babyColorsFem.html">Baby Feminina Color’s</a>
-                            <a href="babySapFem.html">Baby Feminina Malha Persa<br>/ Baby Feminina Sapatilha</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="menu-item">
-                <a href="" class="item">Baby Masc</a>
-                <div class="submenu">
-                    <div class="submenuOrganizacao">
-                        <p>Baby Masculina</p>
-                        <div class="submenuItem">
-                            <a href="babyDesMasc.html">Baby Masculina Desenhada</a>
-                            <a href="babyColorsMasc.html">Baby Masculina Color’s</a>
-                            <a href="babySapMasc.html">Baby Masculina Malha Persa<br>/ Baby Feminina Sapatilha</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="menu-item">
-                <a href="" class="item">Kids Fem</a>
-                <div class="submenu">
-                    <div class="submenuOrganizacao">
-                        <p>Kids Feminina</p>
-                        <div class="submenuItem">
-                            <a href="kidsFem.html">Kids Feminina</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="menu-item">
-                <a href="" class="item">Kids Masc</a>
-                <div class="submenu">
-                    <div class="submenuOrganizacao">
-                        <p>Kids Masculina</p>
-                        <div class="submenuItem">
-                            <a href="kidsMas.html">Kids Masculina</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="menu-item">
-                <a href="" class="item">Adulto Fem</a>
-                <div class="submenu">
-                    <div class="submenuOrganizacao">
-                        <p>Adulto Feminino</p>
-                        <div class="submenuItem">
-                            <div><a href="proFeminino.html">Pró</a>
-                            <a href="CanoCurtoCasualFem.html">Casual</a>
-                            <a href="babyDesFem.html">Baby Desenhada</a>
-                            <a href="CanoLongoFem.html">Casual Cano Longo</a></div>
-                            <div><a href="babyColorsFem.html">Baby Color’s</a>
-                            <a href="canoCurtoFem.html">Cano Curto / Cano Curto Desenhada</a>
-                            <a href="babySapFem.html">Baby Sapatilha / Baby Malha Persa</a>
-                            <a href="kidsFem.html">Kids</a>
+            <div class="menu-icon" id="menuIcon">&#9776;</div>
+            <nav class="cabecalho2">
+                <div class="menu-item">
+                    <a href="" class="item">Baby Fem</a>
+                    <div class="submenu">
+                        <div class="submenuOrganizacao">
+                            <p>Baby Feminino</p>
+                            <div class="submenuItem">
+                                <a href="babyDesFem.html">Baby Feminina Desenhada</a>
+                                <a href="babyColorsFem.html">Baby Feminina Color’s</a>
+                                <a href="babySapFem.html">Baby Feminina Malha Persa<br>/ Baby Feminina Sapatilha</a>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="menu-item">
-                <a href="" class="item">Adulto Masc</a>
-                <div class="submenu">
-                    <div class="submenuOrganizacao">
-                        <p>Adulto Masculino</p>
-                        <div class="submenuItem">
-                            <div><a href="">Pró</a>
-                                <a href="#">Casual</a>
-                                <a href="babyDesMasc.html">Baby Desenhada</a>
-                                <a href="#">Casual Cano Longo</a>
-                                <a href="#">Cano Curto / Cano Curto Desenhada</a></div>
-                                <div><a href="babyColorsMasc.html">Baby Color’s</a>
-                                <a href="babySapMasc.html">Baby Sapatilha / Baby Malha Persa</a>
-                                <a href="kidsMas.html">Kids</a>
-                                <a href="#">Juvenil</a></div>
+                <div class="menu-item">
+                    <a href="" class="item">Baby Masc</a>
+                    <div class="submenu">
+                        <div class="submenuOrganizacao">
+                            <p>Baby Masculina</p>
+                            <div class="submenuItem">
+                                <a href="babyDesMasc.html">Baby Masculina Desenhada</a>
+                                <a href="babyColorsMasc.html">Baby Masculina Color’s</a>
+                                <a href="babySapMasc.html">Baby Masculina Malha Persa<br>/ Baby Feminina Sapatilha</a>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="menu-item">
+                    <a href="" class="item">Kids Fem</a>
+                    <div class="submenu">
+                        <div class="submenuOrganizacao">
+                            <p>Kids Feminina</p>
+                            <div class="submenuItem">
+                                <a href="kidsFem.html">Kids Feminina</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <a href="" class="item">Kids Masc</a>
+                    <div class="submenu">
+                        <div class="submenuOrganizacao">
+                            <p>Kids Masculina</p>
+                            <div class="submenuItem">
+                                <a href="kidsMas.html">Kids Masculina</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <a href="" class="item">Adulto Fem</a>
+                    <div class="submenu">
+                        <div class="submenuOrganizacao">
+                            <p>Adulto Feminino</p>
+                            <div class="submenuItem">
+                                <div><a href="proFeminino.html">Pró</a>
+                                    <a href="CanoCurtoCasualFem.html">Casual</a>
+                                    <a href="babyDesFem.html">Baby Desenhada</a>
+                                    <a href="CanoLongoFem.html">Casual Cano Longo</a>
+                                </div>
+                                <div><a href="babyColorsFem.html">Baby Color’s</a>
+                                    <a href="canoCurtoFem.html">Cano Curto / Cano Curto Desenhada</a>
+                                    <a href="babySapFem.html">Baby Sapatilha / Baby Malha Persa</a>
+                                    <a href="kidsFem.html">Kids</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <a href="" class="item">Adulto Masc</a>
+                    <div class="submenu">
+                        <div class="submenuOrganizacao">
+                            <p>Adulto Masculino</p>
+                            <div class="submenuItem">
+                                <div><a href="proMasculina.html">Pró</a>
+                                    <a href="babyDesMasc.html">Baby Desenhada</a>
+                                    <a href="esportivaMasc.html">Esportiva</a>
+                                    <a href="socialMasculina.html">Social</a>
+                                    <a href="canoCurto-masculino.html">Cano Curto / Cano Curto Desenhada</a>
+                                </div>
+                                <div><a href="babyColorsMasc.html">Baby Color’s</a>
+                                    <a href="babySapMasc.html">Baby Sapatilha / Baby Malha Persa</a>
+                                    <a href="kidsMas.html">Kids</a>
+                                    <a href="juvenilMasculina.html">Juvenil</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        <div class="linha" id="linha"></div>
+    </header>
+
+    <div class="modal-menu" id="modalMenu">
+        <span class="close-modal" id="closeModal">&times;</span> <!-- Botão de fechar -->
+
+        <!-- Logo centralizada no modal -->
+        <div class="imagemLogo">
+            <a href="index.html"><img src="img/logoSene.png" alt="Logo meias sene"></a>
+        </div>
+
+        <!-- Ícones de navegação no modal -->
+        <nav>
+            <div class="menu-itemModal">
+                <a href="#" class="itemModal" data-submenu="babyFem">Baby Feminina</a>
+                <div class="submenuModal" id="submenu-babyFem">
+                    <a href="babyDesFem.html">Baby Feminina Desenhada</a>
+                    <a href="babyColorsFem.html">Baby Feminina Color’s</a>
+                    <a href="babySapFem.html">Baby Feminina Malha Persa / Sapatilha</a>
+                </div>
+            </div>
+
+            <div class="menu-itemModal">
+                <a href="#" class="itemModal" data-submenu="babyMasc">Baby Masculina</a>
+                <div class="submenuModal" id="submenu-babyMasc">
+                    <a href="babyDesMasc.html">Baby Masculina Desenhada</a>
+                    <a href="babyColorsMasc.html">Baby Masculina Color’s</a>
+                    <a href="babySapMasc.html">Baby Masculina Malha Persa / Sapatilha</a>
+                </div>
+            </div>
+
+            <div class="menu-itemModal">
+                <a href="#" class="itemModal" data-submenu="kidsFem">Kids Feminina</a>
+                <div class="submenuModal" id="submenu-kidsFem">
+                    <a href="kidsFem.html">Kids Feminina</a>
+                </div>
+            </div>
+
+            <div class="menu-itemModal">
+                <a href="#" class="itemModal" data-submenu="kidsMasc">Kids Masculina</a>
+                <div class="submenuModal" id="submenu-kidsMasc">
+                    <a href="kidsMas.html">Kids Masculina</a>
+                </div>
+            </div>
+
+            <div class="menu-itemModal">
+                <a href="#" class="itemModal" data-submenu="adultoFem">Adulto Feminina</a>
+                <div class="submenuModal" id="submenu-adultoFem">
+                    <a href="proFeminino.html">Pró</a>
+                    <a href="CanoCurtoCasualFem.html">Casual</a>
+                    <a href="babyDesFem.html">Baby Desenhada</a>
+                    <a href="CanoLongoFem.html">Casual Cano Longo</a>
+                    <a href="babyColorsFem.html">Baby Color’s</a>
+                    <a href="canoCurtoFem.html">Cano Curto / Cano Curto Desenhada</a>
+                    <a href="babySapFem.html">Baby Sapatilha / Baby Malha Persa</a>
+                    <a href="kidsFem.html">Kids</a>
+                </div>
+            </div>
+
+            <div class="menu-itemModal">
+                <a href="#" class="itemModal" data-submenu="adultoMasc">Adulto Masculina</a>
+                <div class="submenuModal" id="submenu-adultoMasc">
+                    <a href="proMasculina.html">Pró</a>
+                    <a href="babyDesMasc.html">Baby Desenhada</a>
+                    <a href="esportivaMasc.html">Esportiva</a>
+                    <a href="socialMasculina.html">Social</a>
+                    <a href="canoCurto-masculino.html">Cano Curto / Cano Curto Desenhada</a>
+                    <a href="babyColorsMasc.html">Baby Color’s</a>
+                    <a href="babySapMasc.html">Baby Sapatilha / Baby Malha Persa</a>
+                    <a href="kidsMas.html">Kids</a>
+                    <a href="juvenilMasculina.html">Juvenil</a>
+                </div>
             </div>
         </nav>
-    </header>
+    </div>
 
     <main>
         <div class="container">
@@ -295,9 +373,6 @@
         </div>
     </footer>
 
-
-
-
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const urlParams = new URLSearchParams(window.location.search);
@@ -335,14 +410,6 @@
         });
 
     </script>
-
-
-
-
-
-
-
-
 
     <script>
         const imagensPorCor = {
