--- a/descricaoFeminina/CanoLongo.html
+++ b/descricaoFeminina/CanoLongo.html
@@ -7,105 +7,183 @@
     <title>Meias Sene</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style-feminino.css">
+    <link rel="icon" href="../img/iconLogo.png">
 </head>
 
 <body>
     <header id="header">
         <div class="cabecalhoUm">
             <div class="imagemLogo">
-                <a href="index.html"><img src="../img/logoSene.png" alt="Logo meias sene"></a>
+                <a href="index.html"><img src="img/logoSene.png" alt="Logo meias sene"></a>
             </div>
-        </div>
-        <div class="linha"></div>
-        <nav class="cabecalho2">
-            <div class="menu-item">
-                <a href="" class="item">Baby Fem</a>
-                <div class="submenu">
-                    <div class="submenuOrganizacao">
-                        <p>Baby Feminino</p>
-                        <div class="submenuItem">
-                            <a href="babyDesFem.html">Baby Feminina Desenhada</a>
-                            <a href="babyColorsFem.html">Baby Feminina Color’s</a>
-                            <a href="babySapFem.html">Baby Feminina Malha Persa<br>/ Baby Feminina Sapatilha</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="menu-item">
-                <a href="" class="item">Baby Masc</a>
-                <div class="submenu">
-                    <div class="submenuOrganizacao">
-                        <p>Baby Masculina</p>
-                        <div class="submenuItem">
-                            <a href="babyDesMasc.html">Baby Masculina Desenhada</a>
-                            <a href="babyColorsMasc.html">Baby Masculina Color’s</a>
-                            <a href="babySapMasc.html">Baby Masculina Malha Persa<br>/ Baby Feminina Sapatilha</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="menu-item">
-                <a href="" class="item">Kids Fem</a>
-                <div class="submenu">
-                    <div class="submenuOrganizacao">
-                        <p>Kids Feminina</p>
-                        <div class="submenuItem">
-                            <a href="kidsFem.html">Kids Feminina</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="menu-item">
-                <a href="" class="item">Kids Masc</a>
-                <div class="submenu">
-                    <div class="submenuOrganizacao">
-                        <p>Kids Masculina</p>
-                        <div class="submenuItem">
-                            <a href="kidsMas.html">Kids Masculina</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="menu-item">
-                <a href="" class="item">Adulto Fem</a>
-                <div class="submenu">
-                    <div class="submenuOrganizacao">
-                        <p>Adulto Feminino</p>
-                        <div class="submenuItem">
-                            <div><a href="proFeminino.html">Pró</a>
-                            <a href="CanoCurtoCasualFem.html">Casual</a>
-                            <a href="babyDesFem.html">Baby Desenhada</a>
-                            <a href="CanoLongoFem.html">Casual Cano Longo</a></div>
-                            <div><a href="babyColorsFem.html">Baby Color’s</a>
-                            <a href="canoCurtoFem.html">Cano Curto / Cano Curto Desenhada</a>
-                            <a href="babySapFem.html">Baby Sapatilha / Baby Malha Persa</a>
-                            <a href="kidsFem.html">Kids</a>
+            <div class="menu-icon" id="menuIcon">&#9776;</div>
+            <nav class="cabecalho2">
+                <div class="menu-item">
+                    <a href="" class="item">Baby Fem</a>
+                    <div class="submenu">
+                        <div class="submenuOrganizacao">
+                            <p>Baby Feminino</p>
+                            <div class="submenuItem">
+                                <a href="babyDesFem.html">Baby Feminina Desenhada</a>
+                                <a href="babyColorsFem.html">Baby Feminina Color’s</a>
+                                <a href="babySapFem.html">Baby Feminina Malha Persa<br>/ Baby Feminina Sapatilha</a>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
-            <div class="menu-item">
-                <a href="" class="item">Adulto Masc</a>
-                <div class="submenu">
-                    <div class="submenuOrganizacao">
-                        <p>Adulto Masculino</p>
-                        <div class="submenuItem">
-                            <div><a href="">Pró</a>
-                                <a href="#">Casual</a>
-                                <a href="babyDesMasc.html">Baby Desenhada</a>
-                                <a href="#">Casual Cano Longo</a>
-                                <a href="#">Cano Curto / Cano Curto Desenhada</a></div>
-                                <div><a href="babyColorsMasc.html">Baby Color’s</a>
-                                <a href="babySapMasc.html">Baby Sapatilha / Baby Malha Persa</a>
-                                <a href="kidsMas.html">Kids</a>
-                                <a href="#">Juvenil</a></div>
+                <div class="menu-item">
+                    <a href="" class="item">Baby Masc</a>
+                    <div class="submenu">
+                        <div class="submenuOrganizacao">
+                            <p>Baby Masculina</p>
+                            <div class="submenuItem">
+                                <a href="babyDesMasc.html">Baby Masculina Desenhada</a>
+                                <a href="babyColorsMasc.html">Baby Masculina Color’s</a>
+                                <a href="babySapMasc.html">Baby Masculina Malha Persa<br>/ Baby Feminina Sapatilha</a>
+                            </div>
                         </div>
                     </div>
                 </div>
+                <div class="menu-item">
+                    <a href="" class="item">Kids Fem</a>
+                    <div class="submenu">
+                        <div class="submenuOrganizacao">
+                            <p>Kids Feminina</p>
+                            <div class="submenuItem">
+                                <a href="kidsFem.html">Kids Feminina</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <a href="" class="item">Kids Masc</a>
+                    <div class="submenu">
+                        <div class="submenuOrganizacao">
+                            <p>Kids Masculina</p>
+                            <div class="submenuItem">
+                                <a href="kidsMas.html">Kids Masculina</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <a href="" class="item">Adulto Fem</a>
+                    <div class="submenu">
+                        <div class="submenuOrganizacao">
+                            <p>Adulto Feminino</p>
+                            <div class="submenuItem">
+                                <div><a href="proFeminino.html">Pró</a>
+                                    <a href="CanoCurtoCasualFem.html">Casual</a>
+                                    <a href="babyDesFem.html">Baby Desenhada</a>
+                                    <a href="CanoLongoFem.html">Casual Cano Longo</a>
+                                </div>
+                                <div><a href="babyColorsFem.html">Baby Color’s</a>
+                                    <a href="canoCurtoFem.html">Cano Curto / Cano Curto Desenhada</a>
+                                    <a href="babySapFem.html">Baby Sapatilha / Baby Malha Persa</a>
+                                    <a href="kidsFem.html">Kids</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="menu-item">
+                    <a href="" class="item">Adulto Masc</a>
+                    <div class="submenu">
+                        <div class="submenuOrganizacao">
+                            <p>Adulto Masculino</p>
+                            <div class="submenuItem">
+                                <div><a href="proMasculina.html">Pró</a>
+                                    <a href="babyDesMasc.html">Baby Desenhada</a>
+                                    <a href="esportivaMasc.html">Esportiva</a>
+                                    <a href="socialMasculina.html">Social</a>
+                                    <a href="canoCurto-masculino.html">Cano Curto / Cano Curto Desenhada</a>
+                                </div>
+                                <div><a href="babyColorsMasc.html">Baby Color’s</a>
+                                    <a href="babySapMasc.html">Baby Sapatilha / Baby Malha Persa</a>
+                                    <a href="kidsMas.html">Kids</a>
+                                    <a href="juvenilMasculina.html">Juvenil</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
+        <div class="linha" id="linha"></div>
+    </header>
+
+    <div class="modal-menu" id="modalMenu">
+        <span class="close-modal" id="closeModal">&times;</span> <!-- Botão de fechar -->
+
+        <!-- Logo centralizada no modal -->
+        <div class="imagemLogo">
+            <a href="index.html"><img src="img/logoSene.png" alt="Logo meias sene"></a>
+        </div>
+
+        <!-- Ícones de navegação no modal -->
+        <nav>
+            <div class="menu-itemModal">
+                <a href="#" class="itemModal" data-submenu="babyFem">Baby Feminina</a>
+                <div class="submenuModal" id="submenu-babyFem">
+                    <a href="babyDesFem.html">Baby Feminina Desenhada</a>
+                    <a href="babyColorsFem.html">Baby Feminina Color’s</a>
+                    <a href="babySapFem.html">Baby Feminina Malha Persa / Sapatilha</a>
+                </div>
+            </div>
+
+            <div class="menu-itemModal">
+                <a href="#" class="itemModal" data-submenu="babyMasc">Baby Masculina</a>
+                <div class="submenuModal" id="submenu-babyMasc">
+                    <a href="babyDesMasc.html">Baby Masculina Desenhada</a>
+                    <a href="babyColorsMasc.html">Baby Masculina Color’s</a>
+                    <a href="babySapMasc.html">Baby Masculina Malha Persa / Sapatilha</a>
+                </div>
+            </div>
+
+            <div class="menu-itemModal">
+                <a href="#" class="itemModal" data-submenu="kidsFem">Kids Feminina</a>
+                <div class="submenuModal" id="submenu-kidsFem">
+                    <a href="kidsFem.html">Kids Feminina</a>
+                </div>
+            </div>
+
+            <div class="menu-itemModal">
+                <a href="#" class="itemModal" data-submenu="kidsMasc">Kids Masculina</a>
+                <div class="submenuModal" id="submenu-kidsMasc">
+                    <a href="kidsMas.html">Kids Masculina</a>
+                </div>
+            </div>
+
+            <div class="menu-itemModal">
+                <a href="#" class="itemModal" data-submenu="adultoFem">Adulto Feminina</a>
+                <div class="submenuModal" id="submenu-adultoFem">
+                    <a href="proFeminino.html">Pró</a>
+                    <a href="CanoCurtoCasualFem.html">Casual</a>
+                    <a href="babyDesFem.html">Baby Desenhada</a>
+                    <a href="CanoLongoFem.html">Casual Cano Longo</a>
+                    <a href="babyColorsFem.html">Baby Color’s</a>
+                    <a href="canoCurtoFem.html">Cano Curto / Cano Curto Desenhada</a>
+                    <a href="babySapFem.html">Baby Sapatilha / Baby Malha Persa</a>
+                    <a href="kidsFem.html">Kids</a>
+                </div>
+            </div>
+
+            <div class="menu-itemModal">
+                <a href="#" class="itemModal" data-submenu="adultoMasc">Adulto Masculina</a>
+                <div class="submenuModal" id="submenu-adultoMasc">
+                    <a href="proMasculina.html">Pró</a>
+                    <a href="babyDesMasc.html">Baby Desenhada</a>
+                    <a href="esportivaMasc.html">Esportiva</a>
+                    <a href="socialMasculina.html">Social</a>
+                    <a href="canoCurto-masculino.html">Cano Curto / Cano Curto Desenhada</a>
+                    <a href="babyColorsMasc.html">Baby Color’s</a>
+                    <a href="babySapMasc.html">Baby Sapatilha / Baby Malha Persa</a>
+                    <a href="kidsMas.html">Kids</a>
+                    <a href="juvenilMasculina.html">Juvenil</a>
+                </div>
             </div>
         </nav>
-    </header>
+    </div>
 
     <main>
         <div class="container">
@@ -123,7 +201,8 @@
                 <div class="informacoesPrecoTamanho">
                     <h3 class="precoContainer" id="preco">gggg</h3>
                     <h3 class="numeracao"> 34 á 38</h3>
-                    <a href="https://shopee.com.br/maria_314#product_list"> <button class="btn-shopee"> Compre na Shoppe</button></a>
+                    <a href="https://shopee.com.br/maria_314#product_list"> <button class="btn-shopee"> Compre na
+                            Shoppe</button></a>
                     <button class="btn-whatsapp"> Compre via <i class="fab fa-whatsapp"></i></button>
                 </div>
             </div>
@@ -136,7 +215,10 @@
             <div class="linhaUm-Descricao-do-produto"></div>
             <div class="linhaDois-Descricao-do-produto"></div>
             <div class="texto-Descricao">
-                <p>As meias femininas de cano longo "Casual" são a combinação perfeita de estilo e conforto para o seu dia a dia. Fabricadas com um tecido macio e durável, elas oferecem um ajuste confortável que abraça suavemente as pernas, mantendo-as aquecidas e elegantes. O design versátil e discreto permite que sejam usadas com diversos tipos de calçados e roupas.</p>
+                <p>As meias femininas de cano longo "Casual" são a combinação perfeita de estilo e conforto para o seu
+                    dia a dia. Fabricadas com um tecido macio e durável, elas oferecem um ajuste confortável que abraça
+                    suavemente as pernas, mantendo-as aquecidas e elegantes. O design versátil e discreto permite que
+                    sejam usadas com diversos tipos de calçados e roupas.</p>
                 <div class="elementosDoTexto-Descricao">
                     <p>• Algodão 60% </p>
                     <p>• Poliamida 28% </p>
@@ -297,9 +379,6 @@
         </div>
     </footer>
 
-
-
-
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const urlParams = new URLSearchParams(window.location.search);
@@ -336,14 +415,6 @@
         });
 
     </script>
-
-
-
-
-
-
-
-
 
     <script>
         const imagensPorCor = {
@@ -429,6 +500,81 @@
 
     </script>
 
+    <script>
+        // CABEÇALHO
+        const menuIcon = document.querySelector('.menu-icon');
+        const modalMenu = document.querySelector('.modal-menu');
+        const closeModal = document.querySelector('.close-modal');
+
+        menuIcon.addEventListener('click', function () {
+            if (modalMenu.classList.contains('show')) {
+                modalMenu.classList.remove('show');
+                document.body.style.overflow = 'auto';
+            } else {
+                modalMenu.classList.add('show');
+                document.body.style.overflow = 'hidden';
+            }
+        });
+
+        if (closeModal) {
+            closeModal.addEventListener('click', function () {
+                modalMenu.classList.remove('show');
+                document.body.style.overflow = 'auto';
+            });
+        }
+
+
+        // Selecione todos os itens do menu
+        const menuItems = document.querySelectorAll('.menu-itemModal');
+
+        // Adicione um listener de clique para cada item
+        menuItems.forEach(item => {
+            item.addEventListener('click', () => {
+                // Alterna a classe 'open' no item clicado
+                item.classList.toggle('open');
+
+                // Fecha outros submenus, se necessário (opcional)
+                menuItems.forEach(otherItem => {
+                    if (otherItem !== item) {
+                        otherItem.classList.remove('open');
+                    }
+                });
+            });
+        });
+
+        document.addEventListener('DOMContentLoaded', function () {
+            // Seleciona todos os itens do menu
+            const itemModals = document.querySelectorAll('.itemModal');
+
+            itemModals.forEach(item => {
+                item.addEventListener('click', function (event) {
+                    event.preventDefault(); // Previne o comportamento padrão do link
+
+                    // Obtém o ID do submenu correspondente
+                    const submenuId = `submenu-${this.getAttribute('data-submenu')}`;
+                    const submenu = document.getElementById(submenuId);
+                    const linha = document.getElementById('linha')
+
+                    // Fecha todos os submenus
+                    document.querySelectorAll('.submenuModal').forEach(sub => {
+                        if (sub !== submenu) {
+                            sub.style.display = 'none'; // Esconde outros submenus
+                        }
+                    });
+
+                    // Alterna a visibilidade do submenu clicado
+                    if (submenu.style.display === "block") {
+                        submenu.style.display = "none";
+                        linha.style.display = "none"; // Esconde se já estiver visível
+                    } else {
+                        submenu.style.display = "block"; // Exibe o submenu
+                    }
+                });
+            });
+        });
+
+        // FIM DO CABEÇALHO
+    </script>
 </body>
 
 </html>
