--- a/descricaoKids/descricaoKidsFem.html
+++ b/descricaoKids/descricaoKidsFem.html
@@ -7,6 +7,7 @@
     <title>Meias Kids Feminina</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style-kids.css">
+    <link rel="icon" href="../img/iconLogo.png">
 </head>
 
 <body>
@@ -376,9 +377,6 @@
         </div>
     </footer>
 
-
-
-
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const urlParams = new URLSearchParams(window.location.search);
@@ -415,14 +413,6 @@
         });
 
     </script>
-
-
-
-
-
-
-
-
 
     <script>
         const imagensPorCor = {
