--- a/descricaoMasculina/descricaoMascCanoCurto.html
+++ b/descricaoMasculina/descricaoMascCanoCurto.html
@@ -7,6 +7,7 @@
     <title>Meias Sene</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style-masc.css">
+    <link rel="icon" href="../img/iconLogo.png">
 </head>
 
 <body>
@@ -367,9 +368,6 @@
         </div>
     </footer>
 
-
-
-
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const urlParams = new URLSearchParams(window.location.search);
@@ -407,7 +405,6 @@
         });
 
     </script>
-
 
     <script>
         const imagensPorCor = {
