--- a/descricaoMasculina/descricaoMascEsportiva.html
+++ b/descricaoMasculina/descricaoMascEsportiva.html
@@ -7,6 +7,7 @@
     <title>Meias Sene</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="style-masc.css">
+    <link rel="icon" href="../img/iconLogo.png">
 </head>
 
 <body>
