--- a/kidsMas.html
+++ b/kidsMas.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meias Sene Kids Masculina</title>
     <link rel="stylesheet" href="kidsmas.css">
+    <link rel="icon" href="img/iconLogo.png">
 </head>
 
 <body>
@@ -666,8 +667,8 @@
 
 
 
-             // CABEÇALHO
-             const menuIcon = document.querySelector('.menu-icon');
+        // CABEÇALHO
+        const menuIcon = document.querySelector('.menu-icon');
         const modalMenu = document.querySelector('.modal-menu');
         const closeModal = document.querySelector('.close-modal');
 
@@ -677,7 +678,7 @@
                 document.body.style.overflow = 'auto';
             } else {
                 modalMenu.classList.add('show');
-                document.body.style.overflow = 'hidden'; 
+                document.body.style.overflow = 'hidden';
             }
         });
 
