--- a/descricaoMasculina/descricaoMascPro.html
+++ b/descricaoMasculina/descricaoMascPro.html
@@ -386,7 +386,7 @@
                         document.getElementById('titulo').textContent = meia.titulo || '';
                         document.getElementById('numeracao').textContent = meia.numeracao || '';
 
-                        const mensagem = `Olá, gostaria de comprar a meia ${meia.titulo}, do preço: ${meia.preco} e da numeração: ${meia.numeracao}. ${meia.codigo || 'não informado'}.`;
+                        const mensagem = `Olá, gostaria de comprar a ${meia.titulo}, do preço: ${meia.preco} e da numeração: ${meia.numeracao}. ${meia.codigo || 'não informado'}.`;
                         const whatsappLink = `https://wa.me/5516997021783?text=${encodeURIComponent(mensagem)}`;
                         whatsappButton.setAttribute('onclick', `window.open('${whatsappLink}', '_blank')`);
                     } else {
