--- a/descricaoKids/descricaoKidsFem.html
+++ b/descricaoKids/descricaoKidsFem.html
@@ -393,7 +393,7 @@
                         document.getElementById('preco').textContent = meia.preco || '';
                         document.getElementById('titulo').textContent = meia.titulo || '';
                         document.getElementById('numeracao').textContent = meia.numeracao || '';
-                        const mensagem = `Olá, gostaria de comprar a meia ${meia.titulo}, do preço: ${meia.preco}.  ${meia.codigo || 'não informado'}.`;
+                        const mensagem = `Olá, gostaria de comprar a ${meia.titulo}, do preço: ${meia.preco}.  ${meia.codigo || 'não informado'}.`;
                         const whatsappLink = `https://wa.me/5516997021783?text=${encodeURIComponent(mensagem)}`;
                         whatsappButton.setAttribute('onclick', `window.open('${whatsappLink}', '_blank')`);
                     } else {
