--- a/descricaoPrincipal/descricaoMeiasPrincipal.html
+++ b/descricaoPrincipal/descricaoMeiasPrincipal.html
@@ -386,7 +386,7 @@
                         document.getElementById('numeracao').textContent = meia.numeracao || '';
                         document.getElementById('descricao').textContent = meia.descricao || '';
 
-                        const mensagem = `Olá, gostaria de comprar a meia ${meia.titulo}, do preço: ${meia.preco} e da numeração: ${meia.numeracao}. ${meia.codigo || 'não informado'}.`;
+                        const mensagem = `Olá, gostaria de comprar a ${meia.titulo}, do preço: ${meia.preco} e da numeração: ${meia.numeracao}. ${meia.codigo || 'não informado'}.`;
                         const whatsappLink = `https://wa.me/5516997021783?text=${encodeURIComponent(mensagem)}`;
                         whatsappButton.setAttribute('onclick', `window.open('${whatsappLink}', '_blank')`);
                     } else {
